# tri-sphere-budget-be

./: .gitignore  .pre-commit-config.yaml  README.md  dev-requirements.txt  main.py  models.py  pyproject.toml  requirements.txt
app/: __init__.py  app_state.py  exception_handlers.py  exceptions.py  init_app.py  logger.py  main.py  settings.py
app/api/: budget_api.py
app/core/: config.py  db.py  models.py
app/core/db_models/: budget_models.py  category_models.py  transaction_models.py
app/database/: sql_mgr.py
app/dependencies/: db_session.py  services.py
app/features/budget/: budget_router.py  budget_service.py
app/services/: budget_service.py  category_service.py  db_service.py  transaction_service.py
app/tests/: conftest.py  test_budget.py  test_category.py  test_expense_category.py  test_transaction.py
app/tests/utils/: faker.py
database/: schema.sql
